<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">OpenGLNamecard</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_namecard">NamecardActivity</string>
    <string name="generate">Generate Virtual Namecard</string>
    <string name="select_photo">Select a picture</string>
    <string name="background_color">Background Color</string>
    <string name="diffuse_lighting">Diffuse Lighting</string>
    <string name="mist_setting">Mist Setting</string>
    <string name="company_name">Company name</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone number</string>
    <string name="information">Information</string>
</resources>
